grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: openshift-fiserv-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccount: grafana-sa
      serviceAccountName: grafana-sa
      containers:
      - image: fmk-prod.nexus-ci.onefiserv.net/vendor/ibm/ibmz/grafana@sha256:8e5e9ce6108bc908bbb1390b38a3ca2066892033ba34537b8b9a54ddb2932584
        name: grafana
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault          
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-data
          - mountPath: /usr/share/grafana/conf/defaults.ini
            name: grafana-config
            subPath: defaults.ini
            readOnly: true
          - name: grafana-certificate
            readOnly: true
            mountPath: "/usr/share/grafana/certificates"
        resources:
          limits:
            cpu: 2
            memory: 4G
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-certificate
          secret:
            secretName: grafana-certificate
        - name: grafana-config
          configMap:
            name: grafana-config
