influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      serviceAccount: influxdb-sa
      serviceAccountName: influxdb-sa
      containers:
      - image: nexus.openshift.training:8090/influxdata/influxdb:1.11
        securityContext:
          fsGroup: 1500
          # allowPrivilegeEscalation: false
          runAsUser: 0
          # capabilities:
          #   drop: ["ALL"]
          # seccompProfile:
          #   type: RuntimeDefault
        name: influxdb
        ports:
          - name: influxdb
            containerPort: 8086
          - name: backup
            containerPort: 8088
        volumeMounts:
          - mountPath: /var/lib/influxdb
            name: influxdb-pvc
          - mountPath: /etc/influxdb/influxdb.conf
            name: influxdb-config
            subPath: influxdb.conf
            readOnly: true
          - mountPath: /init-influxdb.sh
            name: influxdb-init-script
            subPath: init-influxdb.sh
            readOnly: true
          - name: influxdb-certificate
            readOnly: true
            mountPath: "/etc/influxdb/certificates"
        resources:
          limits:
            cpu: 2
            memory: 4G
      volumes:
        - name: influxdb-config
          configMap:
            name: influxdb-config
        - name: influxdb-init-script
          configMap:
            name: influxdb-init-script
            defaultMode: 0755
        - name: influxdb-certificate
          secret:
            secretName: influxdb-certificate
        - name: influxdb-pvc
          persistentVolumeClaim:
            claimName: influxdb-pvc
