grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: grafana
spec:
  host: grafana.apps.vmw.openshift.training
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: ""
    name: grafana
    weight: null
  port:
    targetPort: 3000 
status: {}
